# libsast

./: .gitignore  MANIFEST.in  README.md  TODO.md  patterns.yaml  pyproject.toml  requirements.txt  setup.py  tox.ini
.github/workflows/: codeql.yml  publish.yml  python_test.yml  pythonpackage.yml
libsast/: __init__.py  __main__.py  common.py  exceptions.py  logger.py  scanner.py  standards.py
libsast/core_matcher/: __init__.py  choice_matcher.py  choices.py  helpers.py  matchers.py  pattern_matcher.py
libsast/core_sgrep/: __init__.py  core_sgrep.py  helpers.py  semantic_sgrep.py
libsast/standards/: cwe.yaml  owasp_masvs.yaml  owasp_mavs.yaml  owasp_mobile_top10_2016.yaml  owasp_mobile_top10_2024.yaml  owasp_web_top10_2017.yaml
tests/assets/files/: alternate.python  choice_test.python  handlebars_template.hbs  test_matcher.test
tests/assets/invalid/: invalid_type.yaml  invalid_yaml.yaml  missing_pattern.yaml  missing_type.yaml
tests/assets/multiple/: part1.yaml  part2.yaml
tests/assets/rules/choice_matcher/: choice.yaml
tests/assets/rules/pattern_matcher/: patterns.yaml
tests/assets/rules/semantic_grep/: sgrep.yaml
tests/integration/: test_cli.py
tests/unit/: setup_test.py  test_api.py  test_matcher_rule_file.py  test_matcher_rules.py  test_matchers.py  test_options.py  test_rules.py  test_semgrep.py  test_standards.py
tests/unit/assets/files/: comments.java  example_file.py  test_matcher.test
tests/unit/assets/invalid/: invalid_type.yaml  invalid_yaml.yaml  missing_pattern.yaml
tests/unit/assets/rules/: patterns.yaml
tests/unit/assets/rules/pattern_matcher/: patterns.yaml
tests/unit/assets/rules/semantic_grep/: sgrep.yaml
